--- a/src/header/header.less
+++ b/src/header/header.less
@@ -1,11 +1,23 @@
+@import '../variables.less';
+
+
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.header {
+    background-color: #222;
+    color: white;
+    font-size: 100px;
+    .line-1 {
+        text-transform: uppercase;
+    }
+    [class^=line] {
+        display: block;
+    }
+    .dot {
+        position: absolute;
+        color: @primary;
+    }
 }
