--- a/src/header/header.less
+++ b/src/header/header.less
@@ -1,17 +1,28 @@
-@import '../variables.less';
-
-
+@import (reference) '../index.less';
 .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
 }
 
 .header {
-    background-color: #222;
-    color: white;
-    font-size: 100px;
+    color: @dark-grey;
+    font-size: 120px;
+    margin-left: -25px;
+    padding-top: 125px;
+    margin-bottom: 150px;
+    
     .line-1 {
+        font-family: blackout;
         text-transform: uppercase;
+        font-size: 137%;
+        margin-left: 5px;
+        text-shadow: #fff 2px 2px;
+    }
+    .line-2 {
+        font-family: roboto;
+        line-height: 70px;
+        font-size: 120%;
+        text-shadow: #fff 2px 2px;
     }
     [class^=line] {
         display: block;
@@ -19,5 +30,9 @@
     .dot {
         position: absolute;
         color: @primary;
+        text-shadow: none;
+        font-size: 200%;
+        line-height: 0px;
+        margin-top: -20px;
     }
 }
