show social items and urls

--- a/src/social/social.less
+++ b/src/social/social.less
@@ -1,9 +1,10 @@
 @import (reference) '../index.less';
 
-@icon-height: 150px;
-.social {
+@icon-height: 100px;
+
+.social-items {
     .icon {
-        font-size: 100px;
+        font-size: @icon-height - 50px;
         color: #fff;
         background-color: @dark-grey;
         border: 5px solid #fff;
